--- a/src/skills/skills.css
+++ b/src/skills/skills.css
@@ -95,6 +95,7 @@
 
   .skills-container {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     gap: 50px;
   }
